[package]
name = "scientist"
version = "0.1.0"
authors = ["Nate Mara <nate@onesignal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
tokio = { version = "0.2", features = ["macros"] }
tracing = "0.1"
tracing-futures = "0.2"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "rt-core"] }
tokio-test = "0.2"
