[package]
name = "thesis"
version = "0.3.2"
authors = ["Nate Mara <nate@onesignal.com>"]
edition = "2018"
description = "Rust library for controlling & monitoring experimental code paths"
readme = "README.md"
repository = "https://github.com/OneSignal/thesis"
license = "MIT"
keywords = ["refactoring"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
tokio = { version = "0.2", features = ["macros"] }
tracing = "0.1"
tracing-futures = "0.2"
metrics = "0.12.1"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "rt-core"] }
tokio-test = "0.2"
