[package]
name = "thesis"
version = "0.6.0"
authors = ["Lily Mara <lilymara@onesignal.com>"]
edition = "2018"
description = "Rust library for controlling & monitoring experimental code paths"
readme = "README.md"
repository = "https://github.com/OneSignal/thesis"
license = "MIT"
keywords = ["refactoring"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
tokio = { version = "1.0", features = ["macros"] }
tracing = "0.1"
tracing-futures = "0.2"
metrics = ">=0.22, <=0.24"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
tokio-test = "0.4"
